--- a/assets/css/cart.css
+++ b/assets/css/cart.css
@@ -170,3 +170,44 @@ th {
 .clear-cart-btn:hover {
   background-color: rgb(140, 0, 0);
 }
+
+/* Media Queries */
+@media (max-width: 768px) {
+  .nav-block {
+    flex-direction: column;
+    align-items: center;
+    padding: 10px 20px;
+  }
+
+  .nav-buttons {
+    position: static;
+    margin-top: 10px;
+  }
+
+  .nav-list {
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  .nav-icon {
+    margin: 0 20px;
+  }
+
+  .intro-text {
+    width: 90%;
+    margin-top: 20px;
+  }
+
+  .cart-items {
+    width: 100%;
+    margin: 0;
+  }
+
+  table, th, td {
+    font-size: 14px;
+  }
+
+  .cart-actions {
+    text-align: center;
+  }
+}
