--- a/assets/css/profile.css
+++ b/assets/css/profile.css
@@ -156,3 +156,36 @@ body {
 .profile-form button:hover {
   background-color: rgb(140, 0, 0);
 }
+
+/* Media Queries */
+@media (max-width: 768px) {
+  .nav-block {
+    flex-direction: column;
+    align-items: center;
+    padding: 10px 20px;
+  }
+
+  .nav-buttons {
+    position: static;
+    margin-top: 10px;
+  }
+
+  .nav-list {
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  .nav-icon {
+    margin: 0 20px;
+  }
+
+  .intro-text {
+    width: 90%;
+    margin-top: 20px;
+  }
+
+  .profile-form {
+    width: 90%;
+    margin-top: 20px;
+  }
+}
